4 eia tea works

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,9 +3,21 @@
 <head>
     <title>Project Eia64</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <script defer type="text/javascript" charset="utf-8" src="js/eia.js"></script>
+    <script defer type="text/javascript" charset="utf-8" src="wasm/eia.wasm-runtime.js"></script>
 </head>
-<body onload="main()">
+<body>
+    <script>
+        let runner = null;
+        function init() {
+            TeaVM.wasm.load("wasm/eia.wasm", {
+
+            }).then(teavm => {
+                this.instance = teavm.instance;
+                runner = n => teavm.main([n.toString()]);
+            })
+        }
+        init()
+    </script>
     <button id="meow-button">Meow</button>
 </body>
 </html>
